RESOLVED FIXED282932
[WebGPU] CommandEncoder::trackEncoder introduces a regression with buffer map counts
https://bugs.webkit.org/show_bug.cgi?id=282932
Summary [WebGPU] CommandEncoder::trackEncoder introduces a regression with buffer map...
Mike Wyrzykowski
Reported 2024-11-11 07:57:49 PST
[WebGPU] CommandEncoder::trackEncoder introduces a regression with buffer map counts
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-11 07:58:06 PST
Mike Wyrzykowski
Comment 2 2024-11-11 08:05:27 PST
EWS
Comment 3 2024-11-11 10:34:52 PST
Committed 286438@main (931b73c47452): <https://commits.webkit.org/286438@main> Reviewed commits have been landed. Closing PR #36489 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.