[WebGPU] CommandEncoder::trackEncoder introduces a regression with buffer map counts https://bugs.webkit.org/show_bug.cgi?id=282932 rdar://139649049

Reviewed by Tadeu Zagallo.

Removing on the call to !isValid() is too soon as was pointed
out that will result in buffer map counts not being correctly
propagted after encoding ends but prior to command buffer submission.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::trackEncoder):
WeakHashSet will remove the items for us.

* LayoutTests/platform/mac-wk2/TestExpectations:
Enable corresponding buffer map tests.

Canonical link: https://commits.webkit.org/286438@main